add link and lists for task1

--- a/lesson-5-html/task1.html
+++ b/lesson-5-html/task1.html
@@ -12,6 +12,24 @@
   <img src="koty-zhivotnye-861.jpg"
        alt="Котик">
 </div>
-
+</br>
+<div>
+  <a href="http://google.com">Click here to go to Google</a>
+</div>
+</br>
+<div>
+  A List of what I am going to do today in Numbers:
+  <ol>
+    <li>Wash Dishes</li>
+    <li>Clean the Kitchen</li>
+    <li>Mop the Floor</li>
+  </ol>
+  A List of my Goals in Bullet Points:
+  <ul >
+    <li>Learn HTML</li>
+    <li>Become a Web Developer</li>
+  </ul>
+  <b>Good Luck Learning HTML!</b>
+</div>
 </body>
 </html>
