--- a/lesson-6-html/task1.html
+++ b/lesson-6-html/task1.html
@@ -4,21 +4,29 @@
   <meta charset="UTF-8">
   <title>task-1</title>
   <style type="text/css">
-    table{border-collapse: collapse;width: 400px;}
-    td{border: 5px solid#000}
+      table {
+          border-collapse: collapse;
+          width: 400px;
+      }
+
+      td {
+          border: 5px solid #000
+      }
   </style>
 </head>
 <body>
   <table height="400px">
     <tr>
       <td colspan="2"></td>
-      <td colspan="3"></td>
+      <td colspan="4"></td>
       <td colspan="2"></td>
     </tr>
     <tr>
       <td rowspan="2"></td>
-      <td rowspan="4" colspan="4"></td>
-      <td rowspan="2" colspan="2"></td>
+      <td rowspan="4"
+          colspan="5"></td>
+      <td rowspan="2"
+          colspan="2"></td>
     </tr>
     <tr>
     </tr>
@@ -32,28 +40,25 @@
     <tr>
       <td></td>
       <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td colspan="3"
+          width="5px"></td>
+      <td colspan="2"></td>
     </tr>
     <tr>
-      <td rowspan="2"></td>
+      <td rowspan="3"></td>
       <td></td>
       <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td colspan="3"></td>
+      <td colspan="2"
+          rowspan="2"></td>
     </tr>
-    <tr>
-<!--      <td></td>-->
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+    <tr height="30px">
+      <td colspan="2"
+          rowspan="2"></td>
+      <td colspan="3"></td>
+    </tr>
+    <tr height="30px">
+      <td colspan="5"></td>
     </tr>
   </table>
 </body>
