--- a/lesson-6-html/task1.html
+++ b/lesson-6-html/task1.html
@@ -19,14 +19,17 @@
     <tr>
       <td colspan="2"></td>
       <td colspan="4"></td>
-      <td colspan="2"></td>
+      <td colspan="2"
+          bgcolor="#fffa69"></td>
     </tr>
     <tr>
       <td rowspan="2"></td>
       <td rowspan="4"
-          colspan="5"></td>
+          colspan="5"
+          bgcolor="#ff5b2d"></td>
       <td rowspan="2"
-          colspan="2"></td>
+          colspan="2"
+          bgcolor="#fffa69"></td>
     </tr>
     <tr>
     </tr>
@@ -38,24 +41,27 @@
     <tr>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
+      <td bgcolor="#000000"></td>
+      <td bgcolor="#000000"></td>
       <td colspan="3"
           width="5px"></td>
       <td colspan="2"></td>
     </tr>
     <tr>
-      <td rowspan="3"></td>
-      <td></td>
-      <td></td>
+      <td rowspan="3"
+          bgcolor="#fffa69"></td>
+      <td bgcolor="#000000"></td>
+      <td bgcolor="#000000"></td>
       <td colspan="3"></td>
       <td colspan="2"
-          rowspan="2"></td>
+          rowspan="2"
+          bgcolor="#074481"></td>
     </tr>
     <tr height="30px">
       <td colspan="2"
           rowspan="2"></td>
-      <td colspan="3"></td>
+      <td colspan="3"
+          bgcolor="#000000"></td>
     </tr>
     <tr height="30px">
       <td colspan="5"></td>
