make corrections for list

--- a/lesson-6-html/task2.html
+++ b/lesson-6-html/task2.html
@@ -5,8 +5,7 @@
   <title>task2</title>
 </head>
 <body>
-  <div>
-    <b>Спутники некоторых планет</b>
+  <p><b>Спутники некоторых планет</b></p>
     <ul>
       <li>Земля</li>
       <ol type="1">
@@ -31,6 +30,5 @@
         <li>Нереида</li>
       </ol>
     </ul>
-  </div>
 </body>
 </html>
