--- a/lesson-6-html/task3.html
+++ b/lesson-6-html/task3.html
@@ -6,8 +6,10 @@
 </head>
 <body>
   <p><b>Нобелевские лауреаты</b></p>
-  <ol type="I" >
-    <b><li>Премия по химии</li></b>
+  <ol type="I">
+    <b>
+      <li>Премия по химии</li>
+    </b>
     <ol>
       <li>АРРЕНИУС (Arrhenius),Сванте</li>
       <li>АСТОН (Aston),Френсис Уильям</li>
@@ -19,7 +21,9 @@
       <li>ЭЙЛЕР-ХЕЛЬПИН (Euler-Chelpin),Ханс фон</li>
       <li>ЮРИ (Urey),Гарольд К.</li>
     </ol>
-    <b><li>Премия по литературе</li></b>
+    <b>
+      <li>Премия по литературе</li>
+    </b>
     <ol>
       <li>БЕНАВЕНТЕ-И-МАРТИНАС (Benavente y Martinez),Хасинто</li>
       <li>ВЕРГСОН (Bergson),Анри</li>
@@ -31,7 +35,9 @@
       <li>ЭЙКЕН (Eucken),Рудольф</li>
       <li>ЭЧЕГАРАЙ (Echegaray),Хосе</li>
     </ol>
-    <b><li>Премия мира</li></b>
+    <b>
+      <li>Премия мира</li>
+    </b>
     <ol>
       <li>АССЕР (Asser),Тобиас</li>
       <li>АРНОЛЬДСОН (Arnoldson),Клас</li>
@@ -44,3 +50,4 @@
     </ol>
   </ol>
 </body>
+</html>
