--- a/lesson-6-html/task2.html
+++ b/lesson-6-html/task2.html
@@ -5,6 +5,12 @@
   <title>task2</title>
 </head>
 <body>
+  <p><b>Меню</b></p>
+  <menu>
+    <li><a href="task1.html" title="task1" target="_blank">Задание1</a></li>
+    <li><a href="task2.html" title="task2" target="_blank">Задание2</a></li>
+    <li><a href="task3.html" title="task3" target="_blank">Задание3</a></li>
+  </menu>
   <p><b>Спутники некоторых планет</b></p>
     <ul>
       <li>Земля</li>
