rework for task1

--- a/lesson-7-html-css/task1.html
+++ b/lesson-7-html-css/task1.html
@@ -28,7 +28,7 @@
     <ul>
       <li>
         <span>Фрукты:</span>
-        <ol title="gray">
+        <ol>
           <li>Апельсин</li>
           <li>Слива</li>
           <li>Яблоко</li>
@@ -43,11 +43,11 @@
         </ol>
       </li>
     </ul>
-    <h2 title="blue">Склад</h2>
+    <h2>Склад</h2>
     <ul>
       <li>
         <span>Фрукты:</span>
-        <ol title="green">
+        <ol>
           <li>Вишня</li>
           <li>Груша</li>
           <li>Яблоко</li>
@@ -72,22 +72,22 @@
         <td>Урок 3</td>
       </tr>
       <tr>
-        <td title="name">Саша</td>
-        <td title=green>1</td>
-        <td title=green>1</td>
-        <td title=green>0</td>
+        <td>Саша</td>
+        <td>1</td>
+        <td>1</td>
+        <td>0</td>
       </tr>
       <tr>
-        <td title="name">Таня</td>
-        <td title=green>1</td>
-        <td title=green> 1</td>
-        <td title=green>1</td>
+        <td>Таня</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
       </tr>
       <tr>
-        <td title="name">Сережа</td>
-        <td title=green>0</td>
-        <td title=green>0</td>
-        <td title=green>0</td>
+        <td>Сережа</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
       </tr>
     </table>
   </div>
