--- a/lesson-8-css/task2.html
+++ b/lesson-8-css/task2.html
@@ -18,7 +18,7 @@
       <li><a href="">SPORT</a></li>
       <li><a href="">CULTURE</a></li>
       <li><a href="">TRAVELS</a></li>
-      <span></span>
+      <li><span></span></li>
       <li><a href="">MORE</a></li>
     </ul>
   </nav>
