rework for task2

--- a/lesson-9-layouts/task2.html
+++ b/lesson-9-layouts/task2.html
@@ -7,21 +7,21 @@
         href="style2.css">
 </head>
 <body>
-  <table>
-    <tr>
-      <td><a href="">« FIRST</a></td>
-      <td><a href="">« PREV</a></td>
-      <td><a href="">1</a></td>
-      <td><a href="">2</a></td>
-      <td>...</td>
-      <td><a href="">5</a></td>
-      <td><a href="">6</a></td>
-      <td><a href="">7</a></td>
-      <td><a href="">8</a></td>
-      <td><a href="">9</a></td>
-      <td><a href="">NEXT »</a></td>
-      <td><a href="">LAST »</a></td>
-    </tr>
-  </table>
+  <nav>
+    <ul>
+      <li><a href=""><span>«</span> FIRST</a></li>
+      <li><a href=""><span>«</span> PREV</a></li>
+      <li><a href="">1</a></li>
+      <li><a href="">2</a></li>
+      <li>...</li>
+      <li><a href="">5</a></li>
+      <li><a href="">6</a></li>
+      <li><a href="">7</a></li>
+      <li><a href="">8</a></li>
+      <li><a href="">9</a></li>
+      <li><a href="">NEXT <span>»</span></a></li>
+      <li><a href="">LAST <span>»</span></a></li>
+    </ul>
+  </nav>
 </body>
 </html>
