change div to section for hometask

--- a/lesson-12-backgrounds/starter-host-test-project/customers/index.html
+++ b/lesson-12-backgrounds/starter-host-test-project/customers/index.html
@@ -43,27 +43,27 @@
   <main>
     <div class="container">
       <div class="half-page-top">
-        <div class="half-page-left">
-        </div>
-        <div class="half-page-right">
-          <div class="customer-inf">
+        <section class="half-page-image">
+        </section>
+        <section class="half-page-info">
+          <section class="customer-inf">
             <h1>Mike Statham</h1>
             <h5>Founder of tech-analysis.com</h5>
             <p>SpotHost helped me realize my project with a highly constrained budget in like no time</p>
-          </div>
-        </div>
+          </section>
+        </section>
       </div>
       <div class="half-page-bottom">
-        <div class="half-page-left">
-        </div>
-        <div class="half-page-right">
-          <div class="customer-inf">
+        <section class="half-page-image">
+        </section>
+        <section class="half-page-info">
+          <section class="customer-inf">
             <h1>John Mellow</h1>
             <h5>Hosts his private videos on SpotHost</h5>
             <p>I worked as a blogger and always looked for an integrated hosting and file storage solution. I found it
               in SpotHost!</p>
-          </div>
-        </div>
+          </section>
+        </section>
       </div>
     </div>
   </main>
