--- a/lesson-12-backgrounds/starter-host-test-project/packages/index.html
+++ b/lesson-12-backgrounds/starter-host-test-project/packages/index.html
@@ -40,7 +40,7 @@
   </header>
   <main>
     <div class="container">
-      <div class="box-plus-plan">
+      <section class="box-plus-plan">
         <div class="bg"></div>
         <a href="#">Recommended</a>
         <div class="box-container">
@@ -49,23 +49,23 @@
           <p>Benefit from increased storage and faster support to ensure that your mission-critical data and
             applications are always available!</p>
         </div>
-      </div>
-      <div class="box-free-plan">
+      </section>
+      <section class="box-free-plan">
         <div class="bg"></div>
         <div class="box-container">
           <h2>Our FREE Plan</h2>
           <h3>An extremely solid start into our hosting world.</h3>
           <p>Get started immediately at zero cost!</p>
         </div>
-      </div>
-      <div class="box-premium-plan">
+      </section>
+      <section class="box-premium-plan">
         <div class="bg-premium"></div>
         <div class="box-container">
           <h2>Our PREMIUM Plan</h2>
           <h3>All your enterprise needs. Instant support, quaranteed uptime.</h3>
           <p>The best solution for small to large enterprises. Because hosting shouldn't be in the way!</p>
         </div>
-      </div>
+      </section>
     </div>
   </main>
   <footer class="main-footer">
